changes from review

--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -2142,22 +2142,22 @@ year = {2014}
 
 @article{Schloss2024rarefaction1,
     author = {Patrick D. Schloss},
-    title = {Rarefaction is currently the best approach to control for uneven sequencing     effort in amplicon sequence analyses},
-    journal = {mSphere},
+    title = {Rarefaction is currently the best approach to control for uneven sequencing effort in amplicon sequence analyses},
+    journal = {{mSphere}},
     volume = {9},
     number = {2},
     pages = {e00354-23},
-    url = {https://journals.asm.org/doi/abs/10.1128/msphere.00354-23}
+    doi = {10.1128/msphere.00354-23},
     year = {2024}
 }
 
 @article{Schloss2024rarefaction2,
     author = {Patrick D. Schloss},
     title = {Waste not, want not: revisiting the analysis that called into question the practice of rarefaction},
-    journal = {mSphere},
+    journal = {{mSphere}},
     volume = {9},
     number = {1},
     pages = {e00355-23},
-    url = {https://journals.asm.org/doi/abs/10.1128/msphere.00355-23}
+    doi = {10.1128/msphere.00355-23},
     year = {2024}
 }
