--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -38,8 +38,8 @@ container) with metabolomic profiling data (in `SE`) container, with
 instance in subsetting and other data manipulation tasks. Microbiome
 data can be part of multiomics experiments and analysis strategies. We
 highlight how the methods used througout in this book relate to this
-data framework by using the `TreeSummarizedExperiment`,
-`MultiAssayExperiment`, and classes beyond.
+data framework by using the `TreeSE`,
+`MAE`, and classes beyond.
 
 This section provides an introductions to these data containers. In
 microbiome data science, these containers link taxonomic abundance
@@ -50,7 +50,7 @@ means. Many microbiome experiments include multiple versions and types
 of data generated independently or derived from each other through
 transformation or agglomeration. We start by providing recommendations
 on how to represent different varieties of multi-table data within the
-`TreeSummarizedExperiment` class.
+`TreeSE` class.
 
 The options and recommendations are summarized in [@tbl-options].
 
@@ -118,7 +118,7 @@ rowData(tse)
 ### rowTree  
 
 Phylogenetic trees also play an important role in the microbiome field. The 
-`TreeSummarizedExperiment` class can keep track of features and node
+`TreeSE` class can keep track of features and node
 relations via two functions, `rowTree` and `rowLinks`.
 
 A tree can be accessed via `rowTree` as `phylo` object.       
@@ -153,8 +153,8 @@ same set of samples can be stored as
 
 1. Separate _assays_ assuming that the taxonomic information can be mapped 
 between features directly 1:1; or 
-2. Data in the _altExp_ slot of the `TreeSummarizedExperiment`, if the feature 
-dimensions differ. Each element of the _altExp_ slot is a `SummarizedExperiment`
+2. Data in the _altExp_ slot of the `TreeSE`, if the feature 
+dimensions differ. Each element of the _altExp_ slot is a `SE`
 or an object from a derived class with independent feature data.
 
 The following shows how to store taxonomic abundance tables
@@ -191,20 +191,20 @@ dim(altExp(tse[,1:10],"Phylum"))
 
 For more details on _altExp_, you can check the [introduction](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html) to the `SingleCellExperiment` package [@R_SingleCellExperiment].
 
-### MultiAssayExperiments {#sec-mae}
+### MAEs {#sec-mae}
 
 _**Multiple experiments**_ relate to complementary measurement types,
 such as transcriptomic or metabolomic profiling of the microbiome or
 the host. Multiple experiments can be represented using the same
 options as alternative experiments, or by using the
-`MultiAssayExperiment` class [@Ramos2017]. Depending on how the 
+`MAE` class [@Ramos2017]. Depending on how the 
 datasets relate to each other the data can be stored as:
 
 1. Separate _altExp_ if the samples can be matched directly 1:1; or
-2. As `MultiAssayExperiment` objects, in which the connections between
+2. As `MAE` objects, in which the connections between
 samples are defined through a `sampleMap`. Each element on the
-`experimentsList` of an `MultiAssayExperiment` is `matrix` or
-`matrix`-like objects, including `SummarizedExperiment` objects, and 
+`experimentsList` of an `MAE` is `matrix` or
+`matrix`-like objects, including `SE` objects, and 
 the number of samples can differ between the elements.
 
 <!--
@@ -222,7 +222,7 @@ For information have a look at the [intro vignette](https://bioconductor.org/pac
    altExp             free              match    Alternative experiments  
 MultiAssay            free      free (mapping)    Multi-omic experiments    
 
-: **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that are of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is libraryd but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies. {#tbl-options}
+: **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that are of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is libraryd but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MAE_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies. {#tbl-options}
 
 ## Demonstration data {#sec-example-data}
 
@@ -235,7 +235,7 @@ the use of the data.
 
 The `mia` R package contains example datasets that are direct
 conversions from the alternative `phyloseq` container to the
-`TreeSummarizedExperiment` container.
+`TreeSE` container.
 
 List the [available
 datasets](https://microbiome.github.io/mia/reference/mia-datasets.html) in
@@ -287,7 +287,7 @@ All data are downloaded from ExperimentHub and cached for local
 re-use. Check the [man pages of each
 function](https://microbiome.github.io/microbiomeDataSets/reference/index.html)
 for a detailed documentation of the data contents and references. Let
-us retrieve a `r Biocpkg("MultiAssayExperiment")` dataset:
+us retrieve a `r Biocpkg("MAE")` dataset:
 
 ```{r eval=FALSE, message=FALSE}
 # mae <- HintikkaXOData()
@@ -297,16 +297,16 @@ data(HintikkaXOData, package = "mia")
 mae <- HintikkaXOData
 ```
 
-Data is available in `r Biocpkg("SummarizedExperiment")`, `r
-Biocpkg("TreeSummarizedExperiment")` and `r
-Biocpkg("MultiAssayExperiment")` data containers; see the separate
+Data is available in `r Biocpkg("SE")`, `r
+Biocpkg("TreeSE")` and `r
+Biocpkg("MAE")` data containers; see the separate
 page on [alternative containers](23_multi-assay_analyses.qmd) for more details.
 
 ### Curated metagenomic data
 
 [curatedMetagenomicData](https://bioconductor.org/packages/release/data/experiment/html/curatedMetagenomicData.html)
 is a large collection of curated human microbiome datasets, provided as
-`(Tree)SummarizedExperiment` objects [@Pasolli2017]. The resource
+`(Tree)SE` objects [@Pasolli2017]. The resource
 provides curated human microbiome data including gene families, marker
 abundance, marker presence, pathway abundance, pathway coverage, and
 relative abundance for samples from different body sites. See the
@@ -332,8 +332,8 @@ library(MicroBioMap)
 cpd <- getCompendium()
 ```
 
-This returns a TreeSummarizedExperiment object. Currently, 
-the "tree" part of the TreeSummarizedExperiment is not populated, but 
+This returns a TreeSE object. Currently, 
+the "tree" part of the TreeSE is not populated, but 
 that is on the roadmap[@compendiumpackage].
 
 After loading the compendium, you will have immediate access to nearly 170,000 microbiome samples of publicly available 16S rRNA amplicon sequencing data, all processed using the same pipeline and reference database. For more use examples in R/Bioconductor, see the [MicroBioMap vignette](https://seandavi.github.io/MicroBioMap/articles/overview.html).
@@ -359,7 +359,7 @@ There are several algorithms to do that, and DADA2 is one of the most common.
 You can find DADA2 pipeline tutorial, for example, 
 [here](https://benjjneb.github.io/dada2/tutorial.html).
 After the DADA2 portion of the tutorial is completed, the data is stored into _phyloseq_ object 
-(Bonus: Handoff to phyloseq). To store the data to _TreeSummarizedExperiment_,
+(Bonus: Handoff to phyloseq). To store the data to _TreeSE_,
 follow the example below. 
 
 You can find full workflow script without further explanations and comments from 
@@ -432,7 +432,7 @@ tse
 
 Microbiome (taxonomic) profiling data is commonly distributed in
 various file formats. You can import such external data files as a
-(Tree)SummarizedExperiment object, but the details depend on the file
+(Tree)SE object, but the details depend on the file
 format. Here, we provide examples for common formats. Some datasets and raw
 files to learn how to import raw data and construct TreeSE/MAE containers are
 available in the
@@ -531,7 +531,7 @@ class(tax) # should be data.frame or DataFrame
 class(counts) # should be a numeric matrix
 ```
 
-### Constructing TreeSummarizedExperiment
+### Constructing TreeSE
 
 Now let us create the TreeSE object from the input data tables. Here
 we also convert the data objects in their preferred formats:
@@ -554,9 +554,9 @@ tse_taxa
 
 Now you should have a ready-made TreeSE data object that can be used in downstream analyses.
 
-### Constructing MultiAssayExperiment
+### Constructing MAE
 
-To construct a _MultiAssayExperiment_ object, just combine multiple _TreeSE_ data containers. 
+To construct a _MAE_ object, just combine multiple _TreeSE_ data containers. 
 Here we import metabolite data from the same study.
 
 ```{r importingcsv4, message=FALSE}
@@ -710,9 +710,9 @@ head(rowTree(tse))
 ### Conversions between data formats in R
 
 If the data has already been imported in R in another format, it
-can be readily converted into `TreeSummarizedExperiment`, as shown in our next
+can be readily converted into `TreeSE`, as shown in our next
 example. Note that similar conversion functions to
-`TreeSummarizedExperiment` are available for multiple data formats via
+`TreeSE` are available for multiple data formats via
 the `mia` package (see makeTreeSummarizedExperimentFrom* for phyloseq,
 Biom, and DADA2).
 
@@ -731,7 +731,7 @@ GlobalPatterns_TSE <- makeTreeSummarizedExperimentFromPhyloseq(GlobalPatterns_ph
 GlobalPatterns_TSE
 ```
 
-We can also convert `TreeSummarizedExperiment` objects into `phyloseq`
+We can also convert `TreeSE` objects into `phyloseq`
 with respect to the shared components that are supported by both
 formats (i.e. taxonomic abundance table, sample metadata, taxonomic
 table, phylogenetic tree, sequence information). This is useful for
