harmonizing short namings to monospaced

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -9,7 +9,7 @@ chapterPreamble()
 
 The building blocks of the framework are **data container**
 (SummarizedExperiment and its derivatives), **packages** from various
-developers using the TreeSE container, open **demonstration data
+developers using the `TreeSE` container, open **demonstration data
 sets**, in a separate chapter [@sec-example-data], and **online
 tutorials** including this online book as well as the various package
 vignettes and other materials.
@@ -163,7 +163,7 @@ well originate from entirely different measurement sources as long as
 the samples match.
 
 Let us first agglomerate the data to Phylum level. This yields a new
-TreeSE data object.
+`TreeSE` data object.
 
 ```{r altexp_agglomerate}
 tse_phylum <- mergeFeaturesByRank(tse, "Phylum", na.rm=TRUE)
@@ -306,7 +306,7 @@ page on [alternative containers](23_multi-assay_analyses.qmd) for more details.
 
 [curatedMetagenomicData](https://bioconductor.org/packages/release/data/experiment/html/curatedMetagenomicData.html)
 is a large collection of curated human microbiome datasets, provided as
-`(Tree)SE` objects [@Pasolli2017]. The resource
+`TreeSE` objects [@Pasolli2017]. The resource
 provides curated human microbiome data including gene families, marker
 abundance, marker presence, pathway abundance, pathway coverage, and
 relative abundance for samples from different body sites. See the
@@ -332,8 +332,8 @@ library(MicroBioMap)
 cpd <- getCompendium()
 ```
 
-This returns a TreeSE object. Currently, 
-the "tree" part of the TreeSE is not populated, but 
+This returns a `TreeSE` object. Currently, 
+the "tree" part of the `TreeSE` is not populated, but 
 that is on the roadmap[@compendiumpackage].
 
 After loading the compendium, you will have immediate access to nearly 170,000 microbiome samples of publicly available 16S rRNA amplicon sequencing data, all processed using the same pipeline and reference database. For more use examples in R/Bioconductor, see the [MicroBioMap vignette](https://seandavi.github.io/MicroBioMap/articles/overview.html).
@@ -341,7 +341,7 @@ After loading the compendium, you will have immediate access to nearly 170,000 m
 ### Other data sources
 
 The current collections provide access to vast microbiome data
-resources. The output has to be converted into TreeSE/MAE separately.
+resources. The output has to be converted into `TreeSE/MAE` separately.
 
 - [MGnifyR](https://github.com/beadyallen/MGnifyR) provides access to [EBI/MGnify](https://www.ebi.ac.uk/metagenomics/) 
 - [qiitr](https://github.com/cran/qiitr) provides access to [QIITA](https://qiita.com/about) 
@@ -432,9 +432,9 @@ tse
 
 Microbiome (taxonomic) profiling data is commonly distributed in
 various file formats. You can import such external data files as a
-(Tree)SE object, but the details depend on the file
+`TreeSE` object, but the details depend on the file
 format. Here, we provide examples for common formats. Some datasets and raw
-files to learn how to import raw data and construct TreeSE/MAE containers are
+files to learn how to import raw data and construct `TreeSE/MAE` containers are
 available in the
 [microbiome data repository](https://github.com/microbiome/data).
 
@@ -533,7 +533,7 @@ class(counts) # should be a numeric matrix
 
 ### Constructing TreeSE
 
-Now let us create the TreeSE object from the input data tables. Here
+Now let us create the `TreeSE` object from the input data tables. Here
 we also convert the data objects in their preferred formats:
 
    - counts --> numeric matrix
@@ -552,7 +552,7 @@ tse_taxa <- TreeSummarizedExperiment(assays =  SimpleList(counts = counts),
 tse_taxa
 ```
 
-Now you should have a ready-made TreeSE data object that can be used in downstream analyses.
+Now you should have a ready-made `TreeSE` data object that can be used in downstream analyses.
 
 ### Constructing MAE
 
@@ -598,7 +598,7 @@ Specific import functions are provided for:
 #### Biom import
 
 Here we show how [Biom files](https://biom-format.org/) are imported into
-a TreeSE object using as an example Tengeler2020, which is further described in section [@sec-tengeler-desc]. This dataset consists of 3 files, which can be
+a `TreeSE` object using as an example Tengeler2020, which is further described in section [@sec-tengeler-desc]. This dataset consists of 3 files, which can be
 fetched or downloaded from
 [this repository](https://github.com/microbiome/data/tree/main/Tengeler2020):
 
@@ -615,7 +615,7 @@ sample_meta_file_path <- system.file("extdata", "Mapping_file_ADHD_aggregated.cs
 tree_file_path <- system.file("extdata", "Data_humanization_phylo_aggregation.tre", package = "OMA")
 ```  
 
-Now we can read in the biom file and convert it into a TreeSE object. In addition, we retrieve the rank names from the prefixes of the feature names and then remove them with the `rankFromPrefix` and `removeTaxaPrefixes` optional arguments.
+Now we can read in the biom file and convert it into a `TreeSE` object. In addition, we retrieve the rank names from the prefixes of the feature names and then remove them with the `rankFromPrefix` and `removeTaxaPrefixes` optional arguments.
 
 ```{r}
 library(mia)
@@ -686,9 +686,9 @@ Now the colData includes the sample metadata.
 head(colData(tse))
 ```
 
-Finally, we add a phylogenetic tree to the rowData slot. Such feature is available only in TreeSE objects. Similarly, Trees specifying the sample hierarchy can be stored in the colTree slot.
+Finally, we add a phylogenetic tree to the rowData slot. Such feature is available only in `TreeSE` objects. Similarly, Trees specifying the sample hierarchy can be stored in the colTree slot.
 
-Here, we read in the file containing the phylogenetic tree and insert it in corresponding slot of the TreeSE object.
+Here, we read in the file containing the phylogenetic tree and insert it in corresponding slot of the `TreeSE` object.
 
 ```{r}
 # Reads the tree file
