#471: Update MgnifyR link

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -343,7 +343,7 @@ After loading the compendium, you will have immediate access to nearly 170,000 m
 The current collections provide access to vast microbiome data
 resources. The output has to be converted into TreeSE/MAE separately.
 
-- [MGnifyR](https://github.com/beadyallen/MGnifyR) provides access to [EBI/MGnify](https://www.ebi.ac.uk/metagenomics/) 
+- [MGnifyR](https://bioconductor.org/packages/release/bioc/html/MGnifyR.html) provides access to [EBI/MGnify](https://www.ebi.ac.uk/metagenomics/) 
 - [qiitr](https://github.com/cran/qiitr) provides access to [QIITA](https://qiita.com/about) 
 - [qiime2R](https://github.com/microbiome/qiime2R) provides access to [QIIME2](https://docs.qiime2.org/2024.2/) 
 
