replace *_join functions with mergeSEs in OMA book (#417)
Co-authored-by: Leo Lahti <leo.lahti@iki.fi>

--- a/inst/pages/10_manipulation.qmd
+++ b/inst/pages/10_manipulation.qmd
@@ -340,8 +340,8 @@ head(tse$NewVariable)
 objects. For example, it is possible to combine multiple `TreeSE` objects which each
 includes one sample. 
 
-`mergeSEs` works like `dplyr` joining functions. In fact, there are available
-`dplyr-like` aliases of `mergeSEs`, such as `full_join`.
+`mergeSEs` works much like standard joining operations. It combines rows and 
+columns and allows you to specify the merging method.
 
 ```{r merge1}
 # Take subsets for demonstration purposes
@@ -360,7 +360,7 @@ tse
 
 ```{r merge3}
 # Left join preserves all rows of the 1st object
-tse <- mia::left_join(tse1, tse4, missing_values = 0)
+tse <- mergeSEs(tse1, tse4, missing_values = 0, join = "left")
 tse
 ```
 
