--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -253,20 +253,11 @@ data("GlobalPatterns", package="mia")
 GlobalPatterns
 ```
 
-#### Tengeler2020 {#sec-tengeler-desc}
+R packages contain additional demonstration data sets (see the Datasets section of the reference page):
 
-Tengeler2020 is derived from a randomised blinded study on the effects of gut
-microbiome on attention-deficit/hyperactivity disorder (ADHD) in humanised mice
-[@Tengeler2020]. The dataset is briefly presented in
-[these slides](https://microbiome.github.io/outreach/tengeler2020_presentation.html).
-
-#### HintikkaXOData {#sec-hintikka-desc}
-
-[HintikkaXOData](https://microbiome.github.io/microbiomeDataSets/reference/HintikkaXOData.html)
-is derived from a study about the effects of fat diet and prebiotics on the
-microbiome of rat models [@Hintikka2021]. It is available in the MAE data
-container for R. The dataset is briefly summarized in
-[these slides](https://microbiome.github.io/outreach/hintikkaxo_presentation.html).
+* [mia reference](https://microbiome.github.io/mia/reference/index.html)
+* [miaViz reference](https://microbiome.github.io/miaViz/reference/index.html)
+* [miaTime reference](https://microbiome.github.io/miaTime/reference/index.html)
 
 ### ExperimentHub data
 
