--- a/inst/pages/90_acknowledgments.qmd
+++ b/inst/pages/90_acknowledgments.qmd
@@ -88,6 +88,12 @@ key authors/contributors include:
 
 - *Noah de Gunst*
 
+- *Axel Dagnaud*
+
+- *Ely Seraidarian*
+
+-*Théotime Pralas*
+
 - *Jacques Serizay* converted the _OMA_ book to the `BiocBook` format. This 
 allows the _OMA_ book to be built and distributed by Bioconductor. 
 
