--- a/inst/pages/97_extra_materials.qmd
+++ b/inst/pages/97_extra_materials.qmd
@@ -1,7 +1,7 @@
 # Extra material {#sec-extras} 
 
 ```{r}
-knitr::opts_chunk$set(eval=TRUE, warning=FALSE, message=FALSE)
+knitr::opts_chunk$set(eval=TRUE)
 ```
 
 
@@ -17,7 +17,7 @@ Here we present two possible uses of the `adonis2` function which performs PERMA
 optional argument `by` has an effect on the statistical outcome, so its two options are
 compared here.
 
-```{r permanova_import}
+```{r permanova_import, warning = FALSE, message = FALSE}
 # import necessary packages
 library(gtools)
 library(purrr)
@@ -31,7 +31,7 @@ different orders of three variables with two different approaches:
 `by = "margin"` or `by = "terms"`.
 
 
-```{r permanova_prep}
+```{r permanova_prep, message = FALSE, warning = FALSE}
 # load and prepare data
 library(mia)
 data("enterotype", package="mia")
@@ -55,7 +55,7 @@ margin_df <- data.frame("Formula" = formulas,
 
 
 
-```{r permanova_loop}
+```{r permanova_loop, message = FALSE, warning = FALSE}
 for (row_idx in 1:nrow(var_perm)) {
   
   # generate temporary formula (i.e. "assay ~ ClinicalStatus + Nationality + Gender")
@@ -104,7 +104,7 @@ ClinicalStatus, Gender and Nationality obtained by PERMANOVA with
 formula when `by = "terms"` (default).
 
 
-```{r permanova_table}
+```{r permanova_table, message = FALSE, warning = FALSE}
 
 df <- terms_df %>%
   dplyr::inner_join(margin_df, by = "Formula", suffix = c(" (terms)", " (margin)"))
@@ -127,22 +127,22 @@ data of @Sprockett2020 available
 through `microbiomeDataSets` package.
 
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 library(fido)
 ```
 
 Loading the libraries and importing data:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 library(fido)
 ```
 
-```{r, eval=FALSE}
+```{r, message=FALSE, warning=FALSE, eval=FALSE}
 library(microbiomeDataSets)
 tse <- SprockettTHData()
 ```
 
-```{r, echo=FALSE}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 # saveRDS(tse, file="data/SprockettTHData.Rds")
 # Hidden reading of the saved data
 tse <- readRDS("../extdata/SprockettTHData.Rds")
@@ -154,7 +154,7 @@ We pick three covariates ("Sex","Age_Years","Delivery_Mode") during this
 analysis as an example, and beforehand we check for missing data:
 
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 library(mia)
 cov_names <- c("Sex","Age_Years","Delivery_Mode")
 na_counts <- apply(is.na(colData(tse)[,cov_names]), 2, sum)
@@ -163,21 +163,21 @@ na_summary<-as.data.frame(na_counts,row.names=cov_names)
 
 We drop missing values of the covariates:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 tse <- tse[ , !is.na(colData(tse)$Delivery_Mode) ]
 tse <- tse[ , !is.na(colData(tse)$Age_Years) ]
 ```
 
 We agglomerate microbiome data to Phylum:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 tse_phylum <- mergeFeaturesByRank(tse, "Phylum")
 ```
 
 We extract the counts assay and covariate data to build the model
 matrix:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 Y <- assays(tse_phylum)$counts
 # design matrix
 # taking 3 covariates
@@ -187,7 +187,7 @@ X <- t(model.matrix(~Sex+Age_Years+Delivery_Mode,data=sample_data))
 
 Building the parameters for the `pibble` call to build the model; see more at [vignette](https://jsilve24.github.io/fido/articles/introduction-to-fido.html):
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 n_taxa<-nrow(Y)
 upsilon <- n_taxa+3
 Omega <- diag(n_taxa)
@@ -199,7 +199,7 @@ Gamma <- diag(nrow(X))
 
 Automatically initializing the priors and visualizing their distributions:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 priors <- pibble(NULL, X, upsilon, Theta, Gamma, Xi)
 names_covariates(priors) <- rownames(X)
 plot(priors, pars="Lambda") + ggplot2::xlim(c(-5, 5))
@@ -209,39 +209,39 @@ Estimating the posterior by including our response data `Y`.
 Note: Some computational failures could occur (see [discussion](https://github-wiki-see.page/m/jsilve24/fido/wiki/Frequently-Asked-Questions))
 the arguments `multDirichletBoot` `calcGradHess` could be passed in such case.
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 priors$Y <- Y 
 posterior <- refit(priors, optim_method="adam", multDirichletBoot=0.5) #calcGradHess=FALSE
 ```
 
 Printing a summary about the posterior:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 ppc_summary(posterior)
 ```
 Plotting the summary of the posterior distributions of the regression parameters:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 names_categories(posterior) <- rownames(Y)
 plot(posterior,par="Lambda",focus.cov=rownames(X)[2:4])
 ```
 
 Taking a closer look at "Sex" and "Delivery_Mode":
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 plot(posterior, par="Lambda", focus.cov = rownames(X)[c(2,4)])
 ```
 
 
 ## Interactive 3D Plots
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 # Load libraries
 library(rgl)
 library(plotly)
 ```
 
-```{r setup2}
+```{r setup2, warning=FALSE, message=FALSE}
 library(knitr)
 knitr::knit_hooks$set(webgl = hook_webgl)
 ```
@@ -249,7 +249,7 @@ knitr::knit_hooks$set(webgl = hook_webgl)
 
 In this section we make a 3D version of the earlier  Visualizing the most dominant genus on PCoA (see \@ref(quality-control)), with the help of the plotly [@Sievert2020].
 
-```{r, eval=FALSE}
+```{r, message=FALSE, warning=FALSE, eval=FALSE}
 # Importing necessary libraries
 library(curatedMetagenomicData)
 library(dplyr)
@@ -614,6 +614,7 @@ Ok, let's plot.
 #| label = "plot_red_dim"
 # Plot
 plotReducedDim(tse, "MDS_bray", color_by = "SampleType")
+
 # The sign is given arbitrarily. We can change it to match the plot_ordination
 reducedDim(tse)[, 1] <- -reducedDim(tse)[, 1]
 reducedDim(tse)[, 2] <- -reducedDim(tse)[, 2]
