Fixing phrase issue

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -745,7 +745,7 @@ Conversion is possible between other data formats. Interested readers can refer 
 
 ### Export TreeSummarizedExperiment
 
-Exporting a `TreeSE` data container can be done using *feather* package. TSE object has to be converted into a dataframe (`DataFrame`) to be converted. The output file is .feather file, which can be imported in other languages such as Julia or Python. For information, have a look at the [FeatherFile](https://juliapackages.com/p/featherfiles) Julia package and [feather-format](https://pypi.org/project/feather-format/) Python library.
+Exporting a `TreeSE` data container can be done using *feather* package. TSE object has to be converted into a dataframe (`DataFrame`). The output file is a .feather file, which can be imported in other languages such as Julia or Python. For information, have a look at the [FeatherFile](https://juliapackages.com/p/featherfiles) Julia package and [feather-format](https://pypi.org/project/feather-format/) Python library.
 
 ```{r}
 # Import TSE
