Fixing links to sections

--- a/inst/pages/97_extra_materials.qmd
+++ b/inst/pages/97_extra_materials.qmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(eval=TRUE)
 slide sets for training events.
 
 
-## PERMANOVA comparison {#compare-permanova}
+## PERMANOVA comparison {#sec-compare-permanova}
 
 Here we present two possible uses of the `adonis2` function which performs PERMANOVA. The
 optional argument `by` has an effect on the statistical outcome, so its two options are
