--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -589,7 +589,7 @@ Specific import functions are provided for:
 #### Biom import
 
 Here we show how [Biom files](https://biom-format.org/) are imported into
-a `TreeSE` object using as an example Tengeler2020, which is further described in section [@sec-tengeler-desc]. This dataset consists of 3 files, which can be
+a `TreeSE` object using as an example Tengeler2020, which is further described [here](https://microbiome.github.io/mia/reference/Tengeler2020.html). This dataset consists of 3 files, which can be
 fetched or downloaded from
 [this repository](https://github.com/microbiome/data/tree/main/Tengeler2020):
 
