--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -106,8 +106,7 @@ ggplot(colData(tse), aes(x = SampleType)) +
        y = "Number of Samples")
 ```
 
-Further methods of application can be found in the chapters [@sec-qc]
-and [@sec-richness] and in a few [external
+Further methods of application can be found in the chapters [@sec-qc] and in a few [external
 tutorials](https://github.com/davismcc/scater_tutorials_open_data)
 with open data. Additionally, `rowData` and `colData` allow
 manipulation and subsetting of large data sets into smaller units, as
