--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -356,6 +356,12 @@ follow the example below.
 You can find full workflow script without further explanations and comments from 
 [here](https://github.com/microbiome/OMA/blob/master/dada2_workflow.Rmd)
 
+```{r setup2, warning=FALSE, message=FALSE}
+library(knitr)
+library(rgl)
+knitr::knit_hooks$set(webgl = hook_webgl)
+```
+
 ```{r dada2_1, include=FALSE}
 # Load objects
 seqtab.nochim <- readRDS(system.file("extdata", "dada2_seqtab.nochim", package = "OMA"))
@@ -369,6 +375,7 @@ library(mia)
 library(BiocManager)
 library(Biostrings)
 ```
+
 
 Create arbitrary example sample metadata like it was done in the tutorial. Usually, 
 sample metadata is imported as a file.
@@ -411,7 +418,7 @@ Add sequences into _referenceSeq_ slot and convert rownames into simpler format.
 
 ```{r dada2_5}
 # Convert sequences into right format
-dna <- Biostrings::DNAStringSet( rownames(tse) )
+dna <- Biostrings::DNAStringSet(rownames(tse))
 # Add sequences into referenceSeq slot
 referenceSeq(tse) <- dna
 # Convert rownames into ASV_number format
@@ -736,7 +743,7 @@ GlobalPatterns_phyloseq2
 
 Conversion is possible between other data formats. Interested readers can refer to the following functions:
 
-* [makeTreeSummarizedExperimentFromDADA2](https://microbiome.github.io/mia/reference/makeTreeSummarizedExperimentFromDADA2.html)  
-* [makeSummarizedExperimentFromBiom](https://microbiome.github.io/mia/reference/makeSummarizedExperimentFromBiom.html)  
+* [makeTreeSummarizedExperimentFromDADA2](https://microbiome.github.io/mia/reference/makeTreeSEFromDADA2.html)  
+* [makeSummarizedExperimentFromBiom](https://microbiome.github.io/mia/reference/makeTreeSEFromBiom.html)  
 * [importMetaPhlAn](https://microbiome.github.io/mia/reference/importMetaPhlAn.html)  
 * [importQZA](https://microbiome.github.io/mia/reference/importQIIME2.html)
