Add Legendre 2001 citation  (#485)
Co-authored-by: Leo Lahti <leo.lahti@iki.fi>
Co-authored-by: Théotime Pralas <151254073+thpralas@users.noreply.github.com>
Co-authored-by: Muluh <127390183+Daenarys8@users.noreply.github.com>

--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -108,16 +108,84 @@ plotColData(tse,
             "SampleType", 
             colour_by = "Final_Barcode") +
     theme(axis.text.x = element_text(angle=45,hjust=1)) + 
-  labs(y=expression(Richness[Observed]))
+  labs(expression(Richness[Observed]))
+
 ```
 
-## Visualizing alpha diversities
+### Diversity {#sec-estimate-diversity}  
 
+The main function, `estimateDiversity`, calculates the selected
+diversity index based on the selected assay data.  
 
-### Comparing alpha diversity measures 
+```{r estimate-shannon}
+tse <- mia::estimateDiversity(tse, 
+                              assay.type = "counts",
+                              index = "shannon", 
+                              name = "shannon")
+head(tse$shannon)
+```
 
-Let us now compare the estimated Shannon and Faith indices across
-samples. First we add Shannon and Faith indices.
+Alpha diversities can be visualized with boxplot. Here, Shannon index is compared 
+between different sample type groups. Individual data points are visualized by 
+plotting them as points with `geom_jitter`.
+
+`geom_signif` is used to test whether these differences are statistically significant.
+It adds p-values to plot.
+
+```{r visualize-shannon}
+library(ggsignif)
+library(ggplot2)
+library(patchwork)
+
+# Subsets the data. Takes only those samples that are from feces, skin, or tongue,
+# and creates data frame from the collected data
+df <- as.data.frame(colData(tse)[tse$SampleType %in% 
+                 c("Feces", "Skin", "Tongue"), ])
+
+# Changes old levels with new levels
+df$SampleType <- factor(df$SampleType)
+
+# For significance testing, all different combinations are determined
+comb <- split(t(combn(levels(df$SampleType), 2)), 
+           seq(nrow(t(combn(levels(df$SampleType), 2)))))
+
+ggplot(df, aes(x = SampleType, y = shannon)) +
+  # Outliers are removed, because otherwise each 
+  # data point would be plotted twice; 
+  # as an outlier of boxplot and as a point of dotplot.
+  geom_boxplot(outlier.shape = NA) + 
+  geom_jitter(width = 0.2) + 
+  geom_signif(comparisons = comb, map_signif_level = FALSE,
+              correction="fdr") + #corrects the p-values
+  theme(text = element_text(size = 10))
+```
+
+### Faith phylogenetic diversity {#sec-faith-diversity}
+
+The Faith index is returned by the function `estimateFaith`.
+
+```{r phylo-div-1}
+tse <- mia::estimateFaith(tse,
+                          assay.type = "counts")
+head(tse$faith)
+```
+
+**Note**: because `tse` is a `TreeSummarizedExperiment` object, its phylogenetic tree is used by default. However, the optional argument `tree` must be provided if `tse` does not contain one.
+
+Below a visual comparison between shannon and faith indices is shown with a violin plot.
+
+```{r phylo-div-2}
+plots <- lapply(c("shannon", "faith"),
+                plotColData,
+                object = tse, colour_by = "SampleType")
+plots[[1]] + plots[[2]] +
+  plot_layout(guides = "collect")
+```
+ 
+Alternatively, the phylogenetic diversity can be calculated by `mia::estimateDiversity`. This is a faster re-implementation of   
+the widely used function in _`picante`_ [@R_picante, @Kembel2010].  
+
+Load `picante` R package and get the `phylo` stored in `rowTree`.
 
 ```{r phylo-div-3}
 tse <- mia::estimateDiversity(tse, 
