--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -736,7 +736,7 @@ GlobalPatterns_phyloseq2
 
 Conversion is possible between other data formats. Interested readers can refer to the following functions:
 
-* [makeTreeSummarizedExperimentFromDADA2](https://microbiome.github.io/mia/reference/makeTreeSummarizedExperimentFromDADA2.html)  
-* [makeSummarizedExperimentFromBiom](https://microbiome.github.io/mia/reference/makeSummarizedExperimentFromBiom.html)  
+* [makeTreeSEFromDADA2](https://microbiome.github.io/mia/reference/makeTreeSEFromDADA2.html)  
+* [makeTreeSEFromBiom](https://microbiome.github.io/mia/reference/makeTreeSEFromBiom.html)  
 * [importMetaPhlAn](https://microbiome.github.io/mia/reference/importMetaPhlAn.html)  
 * [importQZA](https://microbiome.github.io/mia/reference/importQIIME2.html)
