fixes from review

--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -120,13 +120,10 @@ head(getUniqueFeatures(tse, rank = "Phylum"))
 
 ### Generate a hierarchy tree on the fly {#sec-fly-tree}
 
-A hierarchy tree is not an actual phylogenic tree.
-A phylogenic tree represents evolutionary relationships among organisms while
-a hierarchy tree organizes species into a hierarchical structure based on their 
-taxonomic ranks.
+A hierarchy tree is not an actual phylogenetic tree.
+A hierarchy tree shows mapping between the taxonomic levels in taxonomic rank table (included in rowData), rather than the detailed phylogenetic relations included in a phylogenetic tree
 
-For instance, the TreeSummarizedExperiment  Tengeler2020 contains an actual
-phylogenic tree.
+For instance, the TreeSummarizedExperiment dataset Tengeler2020 contains an actual phylogenetic tree.
 
 ```{r}
 data(Tengeler2020)
