--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -233,7 +233,7 @@ during the sequencing process. A variation in sequencing depth across the
 samples of a study may impact the calculation of alpha and beta diversity 
 metrics [@Schloss2023]. 
 It is common to find significant variation in sequencing depth between samples.
-For instance, the samples of the TreeSummarizedExperiment dataset 
+For instance, the samples of the *TreeSummarizedExperiment* dataset 
 `GlobalPatterns` show up to a 40-fold difference in the number of gene sequences.
 
 ```{r rarefaction_1}
@@ -254,33 +254,39 @@ However, if the subsampling process is repeated a sufficient number of times,
 and if the rarefaction depth is set to the lowest sequence count found across all samples, no data will be omitted. 
 Moreover, Patrick Schloss has demonstrated that rarefaction is "the only method that could control for variation in uneven sequencing effort when measuring commonly used alpha and beta diversity metrics" [@Schloss2023].
 
-The function `vegan::avgdist` uses rarefaction to compute beta diversity :
+The function `vegan::avgdist` can use rarefaction to compute beta diversity:
 
-```{r, fig.cap = "MDS plot based on the Bray-Curtis distances using rarefaction on the GlobalPatterns dataset."}
-
+```{r, fig.cap = "Non-rarefied (left) and rarefied (right) MDS plots based on the Bray-Curtis distances on the GlobalPatterns dataset."}
 tse <- runMDS(tse, 
               assay.type="counts",
               ntop = nrow(GlobalPatterns),
               FUN = avgdist,
               sample = min(colSums(assay(tse, "counts"))), # rarefaction depth
-			        distfun = vegan::vegdist, # Use vegdist distance function
-			        dmethod = "bray", # Bray-Curtis dissimilarity (vegdist argument)
-			        iterations = 10 # 10 iterations should be enough for distance calculations
+			        distfun = vegan::vegdist, # Use vegdist beta diversity function
+			        dmethod = "bray", # Bray-Curtis beta diversity (vegdist argument)
+			        iterations = 10, # 10 iterations should be enough for beta diversity calculations
+			        name = "MDS_bray_rarefied"
 )
 
-plotReducedDim(tse, "MDS")
+# Generate plots for non-rarefied and rarefied Bray-Curtis distances scaled by MDS
+plots <- lapply(c("MDS_bray", "MDS_bray_rarefied"),
+                plotReducedDim,
+                object = tse)
+
+# Generate multi-panel plot
+wrap_plots(plots) +
+  plot_layout(guides = "collect")
 ```
 
-`ntop` is a `runMDS` option. Here it is set to total number of features in `GlobalPatterns` dataset so that they are not filtered.
+`ntop` is a `runMDS` option. Here it is set to total number of features in `GlobalPatterns` dataset so that they are not filtered. If ntop was not set to the total number of features, only the ntop features with highest variance would be used for dimensionality reduction and the other features would be filtered.
 
-The argument `sample` is by default set to the smallest sequence count across 
+The argument `sample` is set to the smallest sequence count across 
 all samples. This ensures that no sample will be removed during the rarefaction 
-process.
+process. 
 
-The argument `iterations` is by default set to 100. 10 iterations should be 
-sufficient for distance calculations.
+The argument `iterations` is by default set to 100 but 10 iterations is often sufficient for beta diversity calculations.
 
-To use transformations after the rarefaction of the samples and before the beta diversity calculation, `vegan::avgdist` has the argument `transf` :
+To use transformations after the rarefaction of the samples and before the beta diversity calculation, `vegan::avgdist` has the argument `transf`:
 
 ```{r, fig.cap = "MDS plot based on the Bray-Curtis distances using rarefaction with clr transformation on the GlobalPatterns dataset."}
 # Define custom transformation function..
@@ -288,13 +294,13 @@ clr <- function (x) {
   vegan::decostand(x, method="clr", pseudocount=1)
 }
 
-# Run transformation after rarefactions before calculating the distances..
+# Run transformation after rarefactions before calculating the beta diversity..
 tse <- runMDS(tse, assay.type="counts",
                            ntop=nrow(GlobalPatterns), 
-                           FUN = vegan::avgdist, # Custom distance that includes rarefaction
+                           FUN = vegan::avgdist, # Custom beta diversity function that includes rarefaction
                            sample=min(colSums(assay(tse, "counts"))), # rarefaction depth 
-			                     distfun=vegdist,  # Use vegdist distance function
-                           dmethod = "euclidean", # euclidean dissimilarity
+			                     distfun=vegdist,  # Use vegdist beta diversity function
+                           dmethod = "euclidean", # euclidean beta diversity
 			                     iterations = 10, 
 			                     transf=clr) 
 
@@ -302,9 +308,8 @@ plotReducedDim(tse, "MDS")
 ```
 
 The mia package has the rarefaction function `subsampleCounts` that randomly
-subsamples one of the assays of a TreeSummarizedExperiment dataset. However, the 
-iterations and dissimilarity calculations are not included and must be added 
-manually.
+subsamples a given assay of a *TreeSummarizedExperiment* dataset. However, the 
+iterations and beta diversity calculations are not included.
 
 ### Other ordination methods {#sec-other-ord-methods}
 
