--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -258,14 +258,14 @@ The function `vegan::avgdist` can use rarefaction to compute beta diversity:
 
 ```{r, fig.cap = "Non-rarefied (left) and rarefied (right) MDS plots based on the Bray-Curtis distances on the GlobalPatterns dataset."}
 tse <- runMDS(tse, 
-              assay.type="counts",
-              ntop = nrow(GlobalPatterns),
-              FUN = avgdist,
-              sample = min(colSums(assay(tse, "counts"))), # rarefaction depth
-			        distfun = vegan::vegdist, # Use vegdist beta diversity function
-			        dmethod = "bray", # Bray-Curtis beta diversity (vegdist argument)
-			        iterations = 10, # 10 iterations should be enough for beta diversity calculations
-			        name = "MDS_bray_rarefied"
+        	assay.type="counts",
+                ntop = nrow(GlobalPatterns),
+        	FUN = avgdist,
+                sample = min(colSums(assay(tse, "counts"))), # rarefaction depth
+		distfun = vegan::vegdist, # Use vegdist beta diversity function
+		dmethod = "bray", # Bray-Curtis beta diversity (vegdist argument)
+		iterations = 10, # 10 iterations should be enough for beta diversity calculations
+		name = "MDS_bray_rarefied"
 )
 
 # Generate plots for non-rarefied and rarefied Bray-Curtis distances scaled by MDS
@@ -295,14 +295,15 @@ clr <- function (x) {
 }
 
 # Run transformation after rarefactions before calculating the beta diversity..
-tse <- runMDS(tse, assay.type="counts",
-                           ntop=nrow(GlobalPatterns), 
-                           FUN = vegan::avgdist, # Custom beta diversity function that includes rarefaction
-                           sample=min(colSums(assay(tse, "counts"))), # rarefaction depth 
-			                     distfun=vegdist,  # Use vegdist beta diversity function
-                           dmethod = "euclidean", # euclidean beta diversity
-			                     iterations = 10, 
-			                     transf=clr) 
+tse <- runMDS(tse, 
+		assay.type="counts",
+                ntop=nrow(GlobalPatterns), 
+                FUN = vegan::avgdist, # Custom beta diversity function that includes rarefaction
+                sample=min(colSums(assay(tse, "counts"))), # rarefaction depth 
+		distfun=vegdist,  # Use vegdist beta diversity function
+                dmethod = "euclidean", # euclidean beta diversity
+		iterations = 10, 
+		transf=clr) 
 
 plotReducedDim(tse, "MDS")
 ```
