Rename duplicate chunk

--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -247,7 +247,7 @@ The `geom_signif` function provides tools to test whether these
 differences are statistically significant; the function adds
 (adjusted) p-values in the plot.
 
-```{r visualize-shannon}
+```{r visualize-shannon-2}
 library(ggsignif)
 library(ggplot2)
 
