Replace subsetByPrevalent* and subsetByRare* with subsetByPrevalent and subsetByRare (#422)
Co-authored-by: Tuomas Borman <60338854+TuomasBorman@users.noreply.github.com>

--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -142,7 +142,7 @@ relative abundance of the prevalent taxa (between 0 and 1).
 
 Related functions are available for the analysis of rare taxa
 (`rareMembers`; `rareAbundance`; `lowAbundance`, `getRare`,
-`subsetByRareFeatures`).
+`subsetByRare`).
 
 ### Plotting prevalence
 
