--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -747,7 +747,7 @@ Conversion is possible between other data formats. Interested readers can refer 
 
 Exporting a `TreeSE` data container can be done using *feather* package. TSE object has to be converted into a dataframe (`DataFrame`). The output file is a .feather file, which can be imported in other languages such as Julia or Python. For information, have a look at the [FeatherFile](https://juliapackages.com/p/featherfiles) Julia package and [feather-format](https://pypi.org/project/feather-format/) Python library.
 
-```{r}
+```{r, eval=FALSE}
 # Import TSE
 library(mia)
 data(GlobalPatterns, package="mia")
@@ -768,7 +768,7 @@ write_feather(molten_tse,path)
 
 Exporting a `MultiAssayExperiment` data container can also be done using *feather* package.
 
-```{r}
+```{r, eval=FALSE}
 # Convert into a DataFrame
 molten_mae <- longFormat(mae)
 molten_mae <- data.frame(molten_mae)
