Fix issue 329  clearer package indication (#430)
Signed-off-by: Daena Rys <rysdaena8@gmail.com>
Co-authored-by: Jacques Serizay <js2264@cam.ac.uk>
Co-authored-by: Stefanie Peschel <stefpeschel@gmail.com>
Co-authored-by: Leo Lahti <leo.lahti@iki.fi>
Co-authored-by: Muluh <127390183+Daenarys8@users.noreply.github.com>
Co-authored-by: Jacques Serizay <jacquesserizay@gmail.com>
Co-authored-by: TuomasBorman <tvborm@utu.fi>
Co-authored-by: erawijantari <45685102+erawijantari@users.noreply.github.com>
Co-authored-by: Tuomas Borman <60338854+TuomasBorman@users.noreply.github.com>

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -474,7 +474,7 @@ samples <- read.csv(sample_file, row.names=1)  # Sample data (to colData)
 After reading the data in R, ensure the following:
 
 - abundance table (`counts`): numeric `matrix`, with feature IDs as
-  rownames and sample IDs as column names
+  rownames and sample IDs as column names.
 
 - rowdata (`tax`): `DataFrame`, with feature IDs as rownames. If this
   is a `data.frame` you can use the function `DataFrame()` to change
