replace addPerSampleDominantFeatures with addDominant (#444)
Co-authored-by: Leo Lahti <leo.lahti@iki.fi>
Co-authored-by: Tuomas Borman <60338854+TuomasBorman@users.noreply.github.com>

--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -440,9 +440,9 @@ tse_genus <- transformAssay(tse,
                             assay.type = "counts")
 
 # Add info on dominant genus per sample
-tse_genus <- addPerSampleDominantFeatures(tse_genus,
-                                  assay.type = "relabundance",
-                                  name = "dominant_taxa")
+tse_genus <- addDominant(tse_genus,
+                         assay.type = "relabundance",
+                         name = "dominant_taxa")
 # Overview
 summarizeDominance(tse_genus, rank = "Genus", digits = 3, name = "dominant_taxa")
 ```
