Adding link to cheatsheet in 19.1.3.2 & removed some verbose messages (#457)
Co-authored-by: seraidarian <ely.seraidarian@ecole.ensicaen.fr>
Co-authored-by: Tuomas Borman <60338854+TuomasBorman@users.noreply.github.com>

--- a/inst/pages/95_resources.qmd
+++ b/inst/pages/95_resources.qmd
@@ -91,8 +91,10 @@ material can be used to familiarize with such alternative methods:
  * [List of R tools for microbiome analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)  
  * phyloseq [@McMurdie2013]  
  * [microbiome tutorial](http://microbiome.github.io/tutorials/)  
- * [microbiomeutilities](https://microsud.github.io/microbiomeutilities/)  
- * Bioconductor Workflow for Microbiome Data Analysis: from raw reads to community analyses [@Callahan2016].  
+ * [microbiomeutilities](https://microsud.github.io/microbiomeutilities/)
+ * [phyloseq/TreeSE cheatsheet](https://microbiome.github.io/OMA/docs/devel/pages/97_extra_materials.html#cheatsheet)
+ * Bioconductor Workflow for Microbiome Data Analysis: from raw reads to community analyses [@Callahan2016].
+ 
 
 
 ## R programming resources
