Replace meltAssay with meltSE (#459)
Co-authored-by: Leo Lahti <leo.lahti@iki.fi>
Co-authored-by: Tuomas Borman <60338854+TuomasBorman@users.noreply.github.com>

--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -576,7 +576,7 @@ colData(tse)$Barcode_full_length
 ### Library sizes
 
 1. Calculate library sizes  
-2. Subsample / rarify the counts (see: subsampleCounts)  
+2. Subsample / rarefy the counts (see: subsampleCounts)  
 
 Useful functions: nrow, ncol, dim, summary, table, quantile, unique, scater::addPerCellQC, mia::mergeFeaturesByRank
 
@@ -600,7 +600,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 ### Other functions
 
 1. Merge data objects (merge, mergeSEs)  
-2. Melt the data for visualization purposes (meltAssay)  
+2. Melt the data for visualization purposes (meltSE)  
 
 
 ### Assay transformation
