Replace subsampleCounts with rarefyAssay (#462)
Co-authored-by: Leo Lahti <leo.lahti@iki.fi>
Co-authored-by: Tuomas Borman <60338854+TuomasBorman@users.noreply.github.com>

--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -576,7 +576,7 @@ colData(tse)$Barcode_full_length
 ### Library sizes
 
 1. Calculate library sizes  
-2. Subsample / rarefy the counts (see: subsampleCounts)  
+2. Subsample / rarify the counts (see: rarefyAssay)
 
 Useful functions: nrow, ncol, dim, summary, table, quantile, unique, scater::addPerCellQC, mia::mergeFeaturesByRank
 
@@ -1296,4 +1296,3 @@ experiments in the MAE.
 Great job! You performed a cross-correlation analysis between two experiments of
 a MAE and visualized the results with a heatmap. You are also able to customise
 the correlation method and significance testing used for the analysis.
-
