--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -754,14 +754,20 @@ data(GlobalPatterns, package="mia")
 tse <- GlobalPatterns
 # Convert into a DataFrame
 tse <- transformAssay(tse, MARGIN = "samples", method="relabundance")
-molten_tse <- mia::meltAssay(tse,
+molten_tse <- meltAssay(tse,
                         add_row_data = TRUE,
                         add_col_data = TRUE,
                         assay.type = "relabundance")
 # Export as a feather file
 library(feather)
-path <- "dirname(rstudioapi::getSourceEditorContext()$path)/../../../tse.feather"
+path <- "path/to/tse.feather"
 write_feather(molten_tse,path)
+```
+
+Another way could be using a CSV file. This works  the same as for a feather file, make sure you have converted your `TreeSE` data container as a dataframe. Here note that you can decide whether you want to write the row names or not. 
+
+```{r, eval=FALSE}
+write.csv(molten_tse, "path/to/tse.csv", row.names=FALSE)
 ```
 
 ### Export MultiAssayExperiment
@@ -772,7 +778,12 @@ Exporting a `MultiAssayExperiment` data container can also be done using *feathe
 # Convert into a DataFrame
 molten_mae <- longFormat(mae)
 molten_mae <- data.frame(molten_mae)
-path <- "dirname(rstudioapi::getSourceEditorContext()$path)/../../../mae.feather"
+path <- "path/to/mae.feather"
 write_feather(molten_mae,path)
 ```
 
+And as a CSV file.
+
+```{r}
+write.csv(molten_mae, "path/to/mae.csv", row.names=FALSE)
+```
