replace subsampleCounts with rarefyAssay

--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -314,7 +314,7 @@ tse <- runMDS(tse,
 plotReducedDim(tse, "MDS")
 ```
 
-The mia package has the rarefaction function `subsampleCounts` that randomly
+The mia package has the rarefaction function `rarefyAssay`` that randomly
 subsamples a given assay of a *TreeSummarizedExperiment* dataset. However, the 
 iterations and beta diversity calculations are not included.
 
