--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -36,7 +36,7 @@ phylum_renamed <- lapply(rowData(tse)$Phylum,
 rowData(tse)$Phylum <- as.character(phylum_renamed)
 
 # Visualizing the composition barplot, with samples order by "Bacteroidetes"
-plotAbundance(tse, assay.type="relabundance", rank = "Phylum",
+plotAbundance(tse_phylum, assay.type="relabundance", rank = "Phylum",
               order_rank_by="abund", 
               order_sample_by = "Bacteroidetes")
 ```
