--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -275,9 +275,9 @@ at the Phylum level are available in the aforementioned chapter.
 ```{r}
 #| label = "plotAbundance1"
 # agglomerate tse by Order
-tse_order <- mergeFeaturesByRank(tse,
+tse_order <- agglomerateByRank(tse,
                                 rank = "Order",
-                                onRankOnly = TRUE)
+                                na.rm = TRUE)
 # transform counts into relative abundance
 tse_order <- transformAssay(tse_order,
                               assay.type = "counts",
