--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -56,9 +56,13 @@ The options and recommendations are summarized in [@tbl-options].
 
 ### Assay data {#sec-assay-slot}
 
-The original count-based taxonomic abundance tables may have different 
+The microbiome is the collection of all microbes (such as bacteria, viruses, fungi, etc.) in the body. When studying these microbes, data is needed, and that’s where assays come in.
+
+An assay is a way of measuring the presence and abundance of different types of microbes in a sample. For example, if you want to know how many bacteria of a certain type are in your gut, you can use an assay to measure this. When storing assays, the original data is count based. However, the original count-based taxonomic abundance tables may have different 
 transformations, such as logarithmic, Centered Log-Ratio (CLR), or relative 
 abundance. These are typically stored in _**assays**_.
+
+
 
 Let us load example data and rename it as tse.
 
@@ -80,7 +84,11 @@ Individual assays can be accessed via `assay`
 assay(tse, "counts")[1:5,1:7]
 ```
 
-To illustrate the use of multiple assays, the relative abundance data can be 
+
+So, in summary, in the world of microbiome analysis, an assay is essentially a way to quantify and understand the composition of microbes in a given sample, which is super important for all kinds of research, from human health to the environment. 
+
+
+Further more, to illustrate the use of multiple assays, the relative abundance data can be 
 calculated and stored along the original count data using `transformAssay`.
 
 ```{r}
@@ -100,20 +108,25 @@ transformation. This is in fact, a requirement for the assays.
 
 ### colData
 
-`colData` contains data on the samples.
+colData contains information about the samples used in the study. This information can include details such as the sample ID, the primers used in the analysis, the barcodes associated with the sample (truncated or complete), the type of sample (e.g. soil, faecal, mock) and a description of the sample.
 
 ```{r coldata}
 colData(tse)
 ```
 
+To illustrate, ***X.SampleID*** gives the sample identifier, ***SampleType*** indicates the sample type (e.g. soil, fecal matter, control) and ***Description*** provides an additional description of the sample.
+
 ### rowData
 
 `rowData` contains data on the features of the analyzed samples. Of particular
 interest to the microbiome field, this is used to store taxonomic information.
+This taxonomic information is extremely important for understanding the composition and diversity of the microbiome in each sample analyzed. It enables you to identify the different types of micro-organisms present in samples, and to explore the relationships between microbiome composition and various environmental or health factors.
 
 ```{r rowdata}
 rowData(tse)
 ```
+
+
 
 ### rowTree  
 
